--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,8 +1,18 @@
 /*****************************/
+/* Body                      */
+/*****************************/
+body{
+	background-color: #efefef;
+}
+
+/*****************************/
 /* Header                    */
 /*****************************/
 header{
+	z-index: 1;
+	width: 100%;
 	height: 60px;
+	position: fixed;
 }
 
 /*****************************/
@@ -20,9 +30,13 @@ header iframe{
 	width: 80%;
 	margin: auto;
 	height: auto;
-	display: table;
 	position: center;
-	background-color: brown;
+
+	display: -webkit-box;           /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;              /* OLD - Firefox 19- (Não funciona 100%) */
+	display: -ms-flexbox;           /* TWEENER - IE 10 */
+	display: -webkit-flex;          /* NEW - Chrome */
+	display: flex; 					/* Default */
 }
 
 /*****************************/
@@ -31,8 +45,7 @@ header iframe{
 section{
 	width: 75%;
 	float: left;
-	display: table-row;
-	display: inline-block;
+	margin-top: 65px;
 	background-color: blue;
 }
 
@@ -40,24 +53,23 @@ section{
 /* aside                     */
 /*****************************/
 aside{
-	width: 25%;
-	height: 80%;
-	float: right;
-	display: table-row;
-
-	position: relative;
+	width: 24.5%;
+	height: 800px;
+	margin-top: 65px;		
+	margin-left: 4.5px;
 	background-color: gray;
 }
 
 aside iframe{
 	width: 100%;
-	height: 100%;
+	height: 800px;
 }
 
 /*****************************/
 /* footer                    */
 /*****************************/
 footer{
-	background-color: black;
+	margin-top: 5px;
 	clear: both;
+	background-color: #4682B4;
 }
