--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,15 @@
+/*****************************/
+/* Global                    */
+/*****************************/
 *{
 	margin: 0;
 	padding: 0;
+	font-family: 'Roboto', sans-serif, arial;
 }
 
 html, body {
    height: 100%;
+   background-color: #efefef;
 }
 
 iframe{
@@ -13,4 +18,80 @@ iframe{
 
 iframe::-webkit-scrollbar {  
     display: none;
+}
+
+p{
+	font-weight: 200;
+}
+
+a{
+	text-decoration: none;
+}
+
+/*****************************/
+/* Header                    */
+/*****************************/
+header{
+	z-index: 1;
+	width: 100%;
+	height: 60px;
+	position: fixed;
+}
+
+header iframe{
+	width: 100%;
+	height: 60px;
+}
+
+/*****************************/
+/* #container-main           */
+/*****************************/
+#container-main{
+	width: 80%;
+	margin: auto;
+	height: auto;
+	position: center;
+
+	display: -webkit-box;           /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;              /* OLD - Firefox 19- (Não funciona 100%) */
+	display: -ms-flexbox;           /* TWEENER - IE 10 */
+	display: -webkit-flex;          /* NEW - Chrome */
+	display: flex; 					/* Default */
+}
+
+/*****************************/
+/* section                   */
+/*****************************/
+section{
+	width: 75%;
+	margin-top: 65px;
+	background-color: #cfcfcf;
+}
+
+/*****************************/
+/* aside                     */
+/*****************************/
+aside{
+	width: 24.5%;
+	height: 800px;
+	margin-top: 65px;		
+	margin-left: 4.5px;
+}
+
+aside iframe{
+	width: 100%;
+	height: 800px;
+}
+
+/*****************************/
+/* footer                    */
+/*****************************/
+footer{
+	margin-top: 5px;
+	clear: both;
+}
+
+footer iframe{
+	width: 100%;
+	height: 50px;
 }
