Iniciado rodapé e ajustes gerais

--- a/css/global.css
+++ b/css/global.css
@@ -4,12 +4,12 @@
 *{
 	margin: 0;
 	padding: 0;
-	font-family: 'Roboto', sans-serif, arial;
+	font-family: sans-serif, arial;
 }
 
 html, body {
    height: 100%;
-   background-color: #efefef;
+   background-color: #ffffff;
 }
 
 iframe{
@@ -32,7 +32,6 @@ a{
 /* Header                    */
 /*****************************/
 header{
-	z-index: 1;
 	width: 100%;
 	height: 60px;
 	position: fixed;
@@ -64,8 +63,8 @@ header iframe{
 /*****************************/
 section{
 	width: 75%;
-	margin-top: 65px;
-	background-color: #cfcfcf;
+	margin-top: 75px;
+	background-color: #f5f5f5;
 }
 
 /*****************************/
@@ -74,8 +73,8 @@ section{
 aside{
 	width: 24.5%;
 	height: 800px;
-	margin-top: 65px;		
-	margin-left: 4.5px;
+	margin-top: 75px;		
+	margin-left: 15px;
 }
 
 aside iframe{
@@ -87,11 +86,10 @@ aside iframe{
 /* footer                    */
 /*****************************/
 footer{
-	margin-top: 5px;
+	margin-top: 15px;
 	clear: both;
 }
 
 footer iframe{
-	width: 100%;
-	height: 50px;
+	width: 100%;	
 }
