--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -3,5 +3,88 @@
 /*****************************/
 #navbar{
 	height: 60px;
-	background-color: #4682B4;
+	background-color: #30A6E6; /*Possiveis cores: #efefef*/
+	overflow: hidden;
 }
+
+img{
+	float: left;
+	width: 60px;
+	height: 50px;
+	margin-top: 5px;
+	margin-left: 10%;
+}
+
+/*****************************/
+/* Menu                      */
+/*****************************/
+
+
+nav{
+	margin-left: 10%;
+}
+
+nav ul {
+	background: gray;
+	list-style: none;
+	width: 100%;
+}
+
+nav li {
+	float: left;
+	position: relative;
+	width: auto;
+}
+
+nav ul li:first-child{
+	background-color: #ffffff;
+	border-bottom: 5px solid #ffffff;
+}
+
+nav ul li:first-child a{
+	color: #30A6E6;
+}
+
+nav a {
+	color: #FFFFFF;
+	display: block;
+	font: bold 1.19em sans-serif;
+	padding: 18px 25px 14px;
+	text-align: center;
+	-webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	transition: all .25s ease;
+}
+
+nav li:hover a:not(#item-home){
+	border-bottom: 5px solid #ffffff;
+}
+
+/*
+#submenu {
+	left: 0;
+	opacity: 0;
+	position: absolute;
+	top: 35px;
+	visibility: hidden;
+	z-index: 1;
+}
+li:hover ul#submenu {
+	opacity: 1;
+	top: 40px;
+	visibility: visible;
+}
+#submenu li {
+	top: 0.1px;
+	float: none;
+	width: 100%;
+}
+#submenu a:hover {
+	background: #DF4B05;
+}
+#submenu a {
+	background-color:#000000;
+}
+*/
