--- a/css/global.css
+++ b/css/global.css
@@ -9,7 +9,7 @@
 
 html, body {
    height: 100%;
-   background-color: #ffffff;
+   background-color: #f5f5f5;
 }
 
 iframe{
@@ -40,6 +40,12 @@ header{
 header iframe{
 	width: 100%;
 	height: 60px;
+
+	border-bottom: 1px solid #efefef;
+
+	box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-webkit-box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-moz-box-shadow: 0px 0px 50px -15px #b1b1b1;
 }
 
 /*****************************/
@@ -64,7 +70,16 @@ header iframe{
 section{
 	width: 75%;
 	margin-top: 75px;
-	background-color: #f5f5f5;
+	background-color: #ffffff;
+
+	border: 1px solid #efefef;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+
+	box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-webkit-box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-moz-box-shadow: 0px 0px 50px -15px #b1b1b1;
 }
 
 /*****************************/
@@ -74,22 +89,55 @@ aside{
 	width: 24.5%;
 	height: 800px;
 	margin-top: 75px;		
-	margin-left: 15px;
+	margin-left: 15px;	
 }
 
 aside iframe{
 	width: 100%;
 	height: 800px;
+
+	border: 1px solid #efefef;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+
+	box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-webkit-box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-moz-box-shadow: 0px 0px 50px -15px #b1b1b1;
 }
 
 /*****************************/
 /* footer                    */
 /*****************************/
 footer{
-	margin-top: 15px;
 	clear: both;
+	margin-top: 15px;
+
 }
 
 footer iframe{
 	width: 100%;	
+
+	border-top: 1px solid #efefef;
+
+	box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-webkit-box-shadow: 0px 0px 50px -15px #b1b1b1;
+   	-moz-box-shadow: 0px 0px 50px -15px #b1b1b1;
+}
+
+/*****************************/
+/* Input                     */
+/*****************************/
+input[type=text], input[type=password], textarea {  
+	outline: none;
+  	border: 1px solid #efefef;
+  	-webkit-transition: all 0.30s ease-in-out;
+  	-moz-transition: all 0.30s ease-in-out;
+  	-ms-transition: all 0.30s ease-in-out;
+  	-o-transition: all 0.30s ease-in-out;
+}
+ 
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
+  	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  	border: 1px solid rgba(81, 203, 238, 1);
 }
