--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -3,7 +3,7 @@
 /*****************************/
 #navbar{
 	height: 60px;
-	background-color: #30A6E6; /*Possiveis cores: #efefef*/
+	background-color: #30A6E6;
 	overflow: hidden;
 }
 
@@ -18,8 +18,6 @@ img{
 /*****************************/
 /* Menu                      */
 /*****************************/
-
-
 nav{
 	margin-left: 10%;
 }
@@ -38,7 +36,7 @@ nav li {
 
 nav ul li:first-child{
 	background-color: #ffffff;
-	border-bottom: 5px solid #ffffff;
+	
 }
 
 nav ul li:first-child a{
@@ -49,42 +47,48 @@ nav a {
 	color: #FFFFFF;
 	display: block;
 	font: bold 1.19em sans-serif;
-	padding: 18px 25px 14px;
+	padding: 19px 25px 19px;
 	text-align: center;
-	-webkit-transition: all .25s ease;
-	-moz-transition: all .25s ease;
-	-ms-transition: all .25s ease;
-	-o-transition: all .25s ease;
-	transition: all .25s ease;
+
+	-webkit-transition: all 0.15s ease-in-out;
+  	-moz-transition: all 0.15s ease-in-out;
+  	-ms-transition: all 0.15s ease-in-out;
+  	-o-transition: all 0.15s ease-in-out;
 }
 
 nav li:hover a:not(#item-home){
-	border-bottom: 5px solid #ffffff;
+	color: #30A6E6;
+	background-color: #ffffff;
 }
 
-/*
-#submenu {
-	left: 0;
-	opacity: 0;
-	position: absolute;
-	top: 35px;
-	visibility: hidden;
-	z-index: 1;
+/*****************************/
+/* Form                      */
+/*****************************/
+#container-form{
+	display: inline-block;
+	width: auto;
+	float: right;
+
+	margin-top: 15px;
+	margin-right: 10%;
 }
-li:hover ul#submenu {
-	opacity: 1;
-	top: 40px;
-	visibility: visible;
+
+input[type=text], input[type=password]{
+	font-size: 0.9em;
+	width: 11em;
+	height: 1.9em;
+
+	border: 1px solid #efefef;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
 }
-#submenu li {
-	top: 0.1px;
-	float: none;
-	width: 100%;
+
+input[type=submit]{
+	height: 2.2em;
+	width: 5em;
+	border: 1px solid #efefef;
+	border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;	
 }
-#submenu a:hover {
-	background: #DF4B05;
-}
-#submenu a {
-	background-color:#000000;
-}
-*/
