--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -3,8 +3,16 @@
 /*****************************/
 #navbar{
 	height: 60px;
-	background-color: #30A6E6;
 	overflow: hidden;
+
+	background: rgba(114,178,238,1);
+	background: -moz-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(114,178,238,1)), color-stop(100%, rgba(68,145,233,0.98)));
+	background: -webkit-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: -o-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: -ms-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: linear-gradient(to bottom, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72b2ee', endColorstr='#4491e9', GradientType=0 );
 }
 
 img{
@@ -35,7 +43,14 @@ nav li {
 }
 
 nav ul li:first-child{
-	background-color: #ffffff;
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(91%, rgba(237,237,237,1)), color-stop(100%, rgba(237,237,237,1)));
+	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: -o-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: -ms-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=1 );
 	
 }
 
@@ -46,7 +61,7 @@ nav ul li:first-child a{
 nav a {
 	color: #FFFFFF;
 	display: block;
-	font: bold 1.19em sans-serif;
+	font: bold 1.1em sans-serif;
 	padding: 19px 25px 19px;
 	text-align: center;
 
@@ -58,7 +73,15 @@ nav a {
 
 nav li:hover a:not(#item-home){
 	color: #30A6E6;
-	background-color: #ffffff;
+
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(91%, rgba(237,237,237,1)), color-stop(100%, rgba(237,237,237,1)));
+	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: -o-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: -ms-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=1 );
 }
 
 /*****************************/
@@ -90,5 +113,16 @@ input[type=submit]{
 	border: 1px solid #efefef;
 	border-radius: 2px;
 	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;	
+	-moz-border-radius: 2px;
 }
+
+input[type=submit]:hover{
+	background: rgba(226,226,226,1);
+	background: -moz-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
+	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(226,226,226,1)), color-stop(27%, rgba(219,219,219,1)), color-stop(76%, rgba(209,209,209,1)), color-stop(100%, rgba(254,254,254,1)));
+	background: -webkit-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
+	background: -o-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
+	background: -ms-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
+	background: linear-gradient(135deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe', GradientType=1 );
+}	
