--- a/css/rodape-style.css
+++ b/css/rodape-style.css
@@ -4,5 +4,13 @@
 #footer{
 	width: 100%;
 	height: 100%;
-	background-color: #30A6E6;
+
+	background: rgba(114,178,238,1);
+	background: -moz-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(114,178,238,1)), color-stop(100%, rgba(68,145,233,0.98)));
+	background: -webkit-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: -o-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: -ms-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	background: linear-gradient(to bottom, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72b2ee', endColorstr='#4491e9', GradientType=0 );	
 }
