--- a/css/ultimas-noticias-style.css
+++ b/css/ultimas-noticias-style.css
@@ -5,5 +5,29 @@
 	width: 100%;
 	height: 100%;
 	position: fixed;
-	background-color: #ffffff;
+	background-color: #f9f9f9;
+}
+
+/*****************************/
+/* .noticia-aside            */
+/*****************************/
+.noticia-aside{
+	margin: 10px 10px;
+}
+
+.noticia-aside img{
+	border: 1px solid #efefef;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.noticia-aside a{
+	font-size: 1.2em;
+	color: rgba(114,178,238,1);
+}
+
+.noticia-aside p{
+	color: #666;
+	line-height: 18px;
 }
