Pagina de autores concluida

--- a/css/global.css
+++ b/css/global.css
@@ -28,6 +28,22 @@ a{
 	text-decoration: none;
 }
 
+.clear-left{
+	clear: left;
+}
+
+.clear-right{
+	clear: right;
+}
+
+.float-left{
+	float: left;
+}
+
+.float-right{
+	float: right;
+}
+
 /*****************************/
 /* Header                    */
 /*****************************/
