--- a/css/ultimas-noticias-style.css
+++ b/css/ultimas-noticias-style.css
@@ -16,10 +16,10 @@
 }
 
 .noticia-aside img{
-	border: 1px solid #efefef;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
+	border: 1px solid #c1c1c1;
 	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
 }
 
 .noticia-aside a{
