--- a/css/global.css
+++ b/css/global.css
@@ -20,6 +20,10 @@ iframe::-webkit-scrollbar {
     display: none;
 }
 
+h1,h2,h3,h4,h5,h6{
+	color: rgba(114,178,238,1);
+}
+
 p{
 	font-weight: 200;
 }
