--- a/css/contate-nos-style.css
+++ b/css/contate-nos-style.css
@@ -1,13 +1,23 @@
 /*****************************/
 /* #Contate-nos              */
 /*****************************/
-
 section{
+	color: #666;
 	font-size: 1em;
 }
 
-.contate-nos{
-	padding: 30px;
+h1{
+	margin: 30px 0px 0px 30px;
+}
+
+p{
+	margin: 0px 0px 30px 30px;	
+}
+
+.formulario{
+	width: 92%;
+	margin-left: 30px;
+	display: inline-block;
 }
 
 .formulario fieldset{
@@ -17,43 +27,33 @@ section{
 .formulario fieldset label{
 	font-weight: bold;
 	display: block;
-	margin: 10px 0 5px 0;
+	margin: 10px 0px 2px 0px;
 }
 
-.formulario fieldset input{
-	display:inline-block;
-	width: 50%;
-}
-
-.formulario fieldset select{
-	display: inline-block;
-	width: 25%;
-}
-
+.formulario fieldset input,
+.formulario fieldset select,
 .formulario fieldset textarea{
-	display: inline-block;
-	width: 50%;
-	height: 100px;
-	margin: 10px 0 10px 0;
-	font-size: 0.75em;
-}
-
-.formulario input,
-.formulario select {
-	padding: 6px;
+	width: 100%;
+	padding: 6px 0px 6px 0px;
+	
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
 	border: solid 1px #E5E5E5;
-	width: 200px;
-	border-radius: 2px;
 }
 
-.form-contato input:hover, 
-.formulario textarea:hover,
-.formulario input:focus, 
-.formulario fieldset textarea:focus {
-	border-color: #B9B9B9;
+.formulario fieldset textarea{	
+	height: 100px;
+}
+
+#btnEnviar{
+	width: 100%;
+	height: 2.2em;
+	margin-top: 2px;
 }
 
 #btnEnviar:hover{
-	background-color: #dddddd;
+	cursor: pointer;
 	border-color: #B9B9B9;
+	background-color: #dddddd;
 }
