--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -115,13 +115,5 @@ input[type=submit]{
 
 input[type=submit]:hover{
 	cursor: pointer;
-
-	background: rgba(226,226,226,1);
-	background: -moz-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
-	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(226,226,226,1)), color-stop(27%, rgba(219,219,219,1)), color-stop(76%, rgba(209,209,209,1)), color-stop(100%, rgba(254,254,254,1)));
-	background: -webkit-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
-	background: -o-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
-	background: -ms-linear-gradient(-45deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
-	background: linear-gradient(135deg, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 27%, rgba(209,209,209,1) 76%, rgba(254,254,254,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe', GradientType=1 );
+	border: 1px solid #b9b9b9;
 }	
