--- a/css/contate-nos-style.css
+++ b/css/contate-nos-style.css
@@ -14,6 +14,9 @@ p{
 	margin: 0px 0px 30px 30px;	
 }
 
+/*****************************/
+/* .formulario               */
+/*****************************/
 .formulario{
 	width: 92%;
 	margin-left: 30px;
@@ -46,6 +49,9 @@ p{
 	height: 100px;
 }
 
+/*****************************/
+/* #btnEnviar                */
+/*****************************/
 #btnEnviar{
 	width: 100%;
 	height: 2.2em;
@@ -54,6 +60,5 @@ p{
 
 #btnEnviar:hover{
 	cursor: pointer;
-	border-color: #B9B9B9;
-	background-color: #dddddd;
+	border: 1px solid #a1a1a1;
 }
