--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,88 +1,118 @@
-/*Ajustar o tamanho nas laterais */
-.principal {
-margin: 10px 15px;
+/*****************************/
+/* p                         */
+/*****************************/
+p{
+	text-align: justify;
 }
-	/*Tamanho da fonte, cor, espacamento */
-	.principal a{
-	font-size: 30px;
-	text-decoration:none;
+
+/*****************************/
+/* img                         */
+/*****************************/
+img{
+	border: 1px solid #c1c1c1;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+}
+
+/*****************************/
+/* a                         */
+/*****************************/
+.nivel-um a{
+	font-size: 1.4em;
 	color: rgba(114,178,238,1);
-	letter-spacing: -0.03em;
-	line-height: 1.1em;
-	}
-	/*Linha de divisao de noticia*/
- 	#linha-Principal{
- 	margin: 10px 0px;
- 	border-top: 1px dashed #ccc;
-	}
-	/*Sublinhado ao passar o mouse*/
-	.principal a:hover{
-	text-decoration:underline;
-	}
-	/*Ajuste de espacamento depois do titulo*/
-	.principal p{
- 	margin: 10px 0px;
- 	}
-/*Ajustar o tamanho nas laterais */
-.sub-Principal {
-	clear: left;
-	margin: 10px 15px;
-	width: 55%;
+}
+
+.nivel-dois a{
+	font-size: 1.3em;
+	color: rgba(114,178,238,1);
+}
+
+.nivel-tres a{
+	font-size: 1.2em;
+	color: rgba(114,178,238,1);
+}
+
+.nivel-quatro a{
+	font-size: 1.1em;
+	color: rgba(114,178,238,1);
+}
+
+/*****************************/
+/* p                         */
+/*****************************/
+p{
+	font-size: 1em;
+	color: #666;
+}
+/*****************************/
+/* row                       */
+/*****************************/
+.row-for-float{
+	width: 92.5%;
+	margin: 10px 0 0 30px;
+}
+
+/*****************************/
+/* .nivel-um                 */
+/*****************************/
+.nivel-um{
+	width: 92.5%;
+	margin: 30px 0 0 30px;
+}
+
+.nivel-um img{
+	width: 100%;
+}
+
+/*****************************/
+/* .nivel-dois               */
+/*****************************/
+.nivel-dois{
+	float: left;
+	width: 37.5%;
+}
+
+.nivel-dois img{
+	width: 100%;
+}
+
+/*****************************/
+/* .nivel-tres               */
+/*****************************/
+.nivel-tres{
+	width: 60%;
+	margin: 0 0 10px 39.1%;
+	overflow: hidden;
+}
+
+.nivel-tres img{
 	float: left;
 }
-	/*Tamanho da fonte, cor, espacamento */
-	.sub-Principal a{
-	font-size: 20px;	
-	text-decoration:none;
-	color: rgba(114,178,238,1);
-	letter-spacing: -0.03em;
-	line-height: 1.1em;
-	}
-	.sub-Principal p{
- 	margin: 10px 0px;
- 	}
- 	/*Sublinhado ao passar o mouse*/
-	.sub-Principal a:hover{
-	text-decoration:underline;
-	} 
-/*Ajustar o tamanho nas laterais */
-.sub1-Principal, .sub2-Principal{
-	width: 38%;
-	margin-top: 10px;
-	float: right;
+
+.nivel-tres .nivel-tres-texto{
+	margin-left: 52.5%;
 }
-	/*Tamanho da fonte, cor, espacamento */
-	.sub1-Principal a{
-	font-size: 18px;
-	text-decoration:none;
-	color: rgba(114,178,238,1);
-	letter-spacing: -0.02em;
-	line-height: 1.1em;	
-	}
-	.sub1-Principal p{
-	font-size: 15px;
- 	margin: 10px 17px 0px 0px;
- 	}
- 	/*Sublinhado ao passar o mouse*/
-	.sub1-Principal a:hover{
-	text-decoration:underline;
-	}
-	/*Tamanho da fonte, cor, espacamento */
-	.sub2-Principal a{
-	font-size: 18px;
-	text-decoration:none;
-	color: rgba(114,178,238,1);
-	letter-spacing: -0.02em;
-	line-height: 1.1em;
-	}
-	.sub2-Principal p{
-	font-size: 15px;
- 	margin: 10px 17px 0px 0px;
- 	}
-	/*Sublinhado ao passar o mouse*/
-	.sub2-Principal a:hover{
-	text-decoration:underline;
-	}
 
+/*****************************/
+/* .nivel-quatro             */
+/*****************************/
+.nivel-quatro{	
+	width: 23.8%;
+	margin-bottom: 10px;
+}
 
+.nivel-quatro img{
+	width: 100%;
+}
 
+.nivel-quatro{
+	float: left;
+	overflow: hidden;
+}
+
+.row-for-float .dois,
+.row-for-float .tres,
+.row-for-float .quatro{
+	margin-left: 11px;
+}
