--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -56,7 +56,7 @@ nav ul li:first-child a{
 }
 
 nav a {
-	color: #FFFFFF;
+	color: #ffffff;
 	display: block;
 	font: bold 1.1em sans-serif;
 	padding: 19px 25px 19px;
@@ -115,5 +115,5 @@ input[type=submit]{
 
 input[type=submit]:hover{
 	cursor: pointer;
-	border: 1px solid #b9b9b9;
+	border: 1px solid #a1a1a1;
 }	
