--- a/css/ultimas-noticias-style.css
+++ b/css/ultimas-noticias-style.css
@@ -16,10 +16,11 @@
 }
 
 .noticia-aside img{
-	border: 1px solid #c1c1c1;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
+	width: 100%;
+}
+
+img:hover{
+	border: 1px solid #a1a1a1;
 }
 
 .noticia-aside a{
