--- a/css/contate-nos-style.css
+++ b/css/contate-nos-style.css
@@ -7,6 +7,7 @@ section{
 }
 
 h1{
+	font-size: 2em;
 	margin: 30px 0px 0px 30px;
 }
 
@@ -56,6 +57,8 @@ p{
 	width: 100%;
 	height: 2.2em;
 	margin-top: 2px;
+	color: #ffffff;
+	background-color: rgba(114,178,238,1);;
 }
 
 #btnEnviar:hover{
