--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,3 +1,7 @@
+section h1{
+	display: none;
+}
+
 /*****************************/
 /* p                         */
 /*****************************/
