--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,7 @@
 
 html, body {
    height: 100%;
+   overflow: auto;
    background-color: #f5f5f5;
 }
 
@@ -222,4 +223,28 @@ textarea:focus,
 select:focus {
   	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
   	border: 1px solid rgba(81, 203, 238, 1);
+}
+
+/*****************************/
+/* Dashboard                 */
+/*****************************/
+
+#menu-dashboard{
+	width: 18%;
+	height: 900px;
+	margin-top: 60px;	
+}
+
+#menu-dashboard iframe{
+	width: 100%;
+	height: 100%;
+}
+
+#container-dashboard{
+	width: 82%;
+	margin-top: 60px;
+}
+
+#footer-dashboard iframe{
+	margin-top: 0px;
 }
