Concluido builder de cores

--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -1,115 +1,97 @@
 /*****************************/
-/* Navbar                    */
-/*****************************/
-#navbar{
-	height: 60px;
-	overflow: hidden;
+					/* Navbar                    */
+					/*****************************/
+					#navbar{
+						height: 60px;
+						overflow: hidden;
 
-	background: rgba(114,178,238,1);
-	background: -moz-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(114,178,238,1)), color-stop(100%, rgba(68,145,233,0.98)));
-	background: -webkit-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: -o-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: -ms-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: linear-gradient(to bottom, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-}
+						background: #72b2ee;
+					}
 
-img{
-	margin-top: 5px;
-	margin-left: 10%;
-}
+					img{
+						margin-top: 5px;
+						margin-left: 10%;
+					}
 
-/*****************************/
-/* Menu                      */
-/*****************************/
-nav{
-	margin-left: 10%;
-}
+					/*****************************/
+					/* Menu                      */
+					/*****************************/
+					nav{
+						margin-left: 10%;
+					}
 
-nav ul {
-	background: gray;
-	list-style: none;
-	width: 100%;
-}
+					nav ul {
+						background: gray;
+						list-style: none;
+						width: 100%;
+					}
 
-nav li {
-	float: left;
-	width: auto;
-	position: relative;
-}
+					nav li {
+						float: left;
+						width: auto;
+						position: relative;
+					}
 
-nav ul li:first-child{
-	background: rgba(255,255,255,1);
-	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(91%, rgba(237,237,237,1)), color-stop(100%, rgba(237,237,237,1)));
-	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: -o-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: -ms-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-}
+					nav ul li:first-child{
+						background: #ffffff;
+					}
 
-nav ul li:first-child a{
-	color: #30A6E6;
-}
+					nav ul li:first-child a{
+						color: #72b2ee;
+					}
 
-nav a {
-	color: #ffffff;
-	display: block;
-	font: bold 1.1em sans-serif;
-	padding: 19px 25px 19px;
-	text-align: center;
+					nav a {
+						color: #ffffff;
+						display: block;
+						font: bold 1.1em sans-serif;
+						padding: 19px 25px 19px;
+						text-align: center;
 
-	-webkit-transition: all 0.15s ease-in-out;
-  	-moz-transition: all 0.15s ease-in-out;
-  	-ms-transition: all 0.15s ease-in-out;
-  	-o-transition: all 0.15s ease-in-out;
-}
+						-webkit-transition: all 0.15s ease-in-out;
+					  	-moz-transition: all 0.15s ease-in-out;
+					  	-ms-transition: all 0.15s ease-in-out;
+					  	-o-transition: all 0.15s ease-in-out;
+					}
 
-nav li:hover a:not(#item-home){
-	color: #30A6E6;
+					nav li:hover a:not(#item-home){
+						color: #72b2ee;
 
-	background: rgba(255,255,255,1);
-	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(91%, rgba(237,237,237,1)), color-stop(100%, rgba(237,237,237,1)));
-	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: -o-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: -ms-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-	background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 91%, rgba(237,237,237,1) 100%);
-}
+						background: #ffffff;
+					}
 
-/*****************************/
-/* Form                      */
-/*****************************/
-#container-form{
-	display: inline-block;
-	width: auto;
-	float: right;
+					/*****************************/
+					/* Form                      */
+					/*****************************/
+					#container-form{
+						display: inline-block;
+						width: auto;
+						float: right;
 
-	margin-top: 15px;
-	margin-right: 10%;
-}
+						margin-top: 15px;
+						margin-right: 10%;
+					}
 
-input[type=text], input[type=password]{
-	font-size: 0.9em;
-	width: 11em;
-	height: 1.9em;
+					input[type=text], input[type=password]{
+						font-size: 0.9em;
+						width: 11em;
+						height: 1.9em;
 
-	border: 1px solid #efefef;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
-	border-radius: 2px;
-}
+						border: 1px solid #efefef;
+						-webkit-border-radius: 2px;
+						-moz-border-radius: 2px;
+						border-radius: 2px;
+					}
 
-input[type=submit]{
-	height: 2.2em;
-	width: 6em;
-	border: 1px solid #efefef;
-	border-radius: 2px;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
-}
+					input[type=submit]{
+						height: 2.2em;
+						width: 6em;
+						border: 1px solid #efefef;
+						border-radius: 2px;
+						-webkit-border-radius: 2px;
+						-moz-border-radius: 2px;
+					}
 
-input[type=submit]:hover{
-	cursor: pointer;
-	border: 1px solid #a1a1a1;
-}	
+					input[type=submit]:hover{
+						cursor: pointer;
+						border: 1px solid #a1a1a1;
+					}	
