--- a/css/autores-style.css
+++ b/css/autores-style.css
@@ -1,70 +1,70 @@
 /************************************/
-/* Autores.html 					*/
-/************************************/
-h1{
-	font-size: 2em;
-	margin: 30px 0px 0px 30px;
-	color: rgba(114,178,238,1);
-}
+					/* Autores.html 					*/
+					/************************************/
+					h1{
+						font-size: 2em;
+						margin: 30px 0px 0px 30px;
+						color: #72b2ee;
+					}
 
-.article{
-	text-align: justify;
-}
+					.article{
+						text-align: justify;
+					}
 
-/************************************/
-/* box-autor-left & box-autor-right */
-/************************************/
-.box-autor-left, .box-autor-right{
-	width: 88.5%;
-	margin: 10px 0 10px 30px;
-	background-color: #f9f9f9;
+					/************************************/
+					/* box-autor-left & box-autor-right */
+					/************************************/
+					.box-autor-left, .box-autor-right{
+						width: 88.5%;
+						margin: 10px 0 10px 30px;
+						background-color: #f9f9f9;
 
-	border: 1px solid #e1e1e1;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-}
+						border: 1px solid #e1e1e1;
+						border-radius: 4px;
+						-moz-border-radius: 4px;
+						-webkit-border-radius: 4px;
+					}
 
-.box-autor-left{
-	padding: 1em 1.5em 1em 0.5em;
-}
+					.box-autor-left{
+						padding: 1em 1.5em 1em 0.5em;
+					}
 
-.box-autor-right{
-	padding: 1em 0.5em 1em 1.5em;
-}
+					.box-autor-right{
+						padding: 1em 0.5em 1em 1.5em;
+					}
 
-.box-autor-left h2, .box-autor-right h2{
-	color: rgba(114,178,238,1);
-}
+					.box-autor-left h2, .box-autor-right h2{
+						color: #72b2ee;
+					}
 
-.box-autor-left .article, .box-autor-right .article{
-	width: 80%;
-	color: #666;
-	margin-top: 0.2em;
-	line-height: 1.2em;
-}
+					.box-autor-left .article, .box-autor-right .article{
+						width: 80%;
+						color: #666;
+						margin-top: 0.2em;
+						line-height: 1.2em;
+					}
 
-.box-autor-left h2, .box-autor-left .article{
-	margin-left: 21%;
-}
+					.box-autor-left h2, .box-autor-left .article{
+						margin-left: 21%;
+					}
 
-.box-autor-right h2, .box-autor-right .article{
-	margin-right: 21%;
-}
+					.box-autor-right h2, .box-autor-right .article{
+						margin-right: 21%;
+					}
 
-/************************************/
-/* img-rounded   					*/
-/************************************/
-.img-rounded {
-	border-radius: 80px;
-	-webkit-border-radius: 80px;
-	-moz-border-radius: 80px;
-}
+					/************************************/
+					/* img-rounded   					*/
+					/************************************/
+					.img-rounded {
+						border-radius: 80px;
+						-webkit-border-radius: 80px;
+						-moz-border-radius: 80px;
+					}
 
-.box-autor-left .img-rounded{
-	margin-right: 10px;
-}
+					.box-autor-left .img-rounded{
+						margin-right: 10px;
+					}
 
-.box-autor-right .img-rounded{
-	margin-left: 10px;
-}
+					.box-autor-right .img-rounded{
+						margin-left: 10px;
+					}
