--- a/css/rodape-style.css
+++ b/css/rodape-style.css
@@ -1,70 +1,64 @@
 /*****************************/
-/* #footer                    */
-/*****************************/
-div#footer{
-	width: 100%;
-	height: 100%;
+					/* #footer                    */
+					/*****************************/
+					div#footer{
+						width: 100%;
+						height: 100%;
 
-	background: rgba(114,178,238,1);
-	background: -moz-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(114,178,238,1)), color-stop(100%, rgba(68,145,233,0.98)));
-	background: -webkit-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: -o-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: -ms-linear-gradient(top, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-	background: linear-gradient(to bottom, rgba(114,178,238,1) 0%, rgba(68,145,233,0.98) 100%);
-}
+						background: #72b2ee;
+					}
 
-#container{
-	width: 80%;
-	height: 100%;
-	margin-left: 10%;
-}
+					#container{
+						width: 80%;
+						height: 100%;
+						margin-left: 10%;
+					}
 
-#time{
-	width: 10%;
-	float: left;
-	list-style: none;
-	margin-top: 15px;
-	display: inline-block;
-}
+					#time{
+						width: 10%;
+						float: left;
+						list-style: none;
+						margin-top: 15px;
+						display: inline-block;
+					}
 
-#time h1{
-	color: #666;
-	margin-bottom: 10px;
-	display: inline-block;
-	font-size: 18px;	
-}
+					#time h1{
+						color: #666;
+						margin-bottom: 10px;
+						display: inline-block;
+						font-size: 18px;	
+					}
 
-ul{
-	list-style: none;
-}
+					ul{
+						list-style: none;
+					}
 
-li{
-	color: #666;
-	font-size: 12px;	
-}
+					li{
+						color: #666;
+						font-size: 12px;	
+					}
 
-#redes-sociais{
-	float: right;
-	width: 15%;
-	height: 10%;
+					#redes-sociais{
+						float: right;
+						width: 15%;
+						height: 10%;
 
-	margin-top: 6%;
-}
+						margin-top: 6%;
+					}
 
-img:hover{
-	cursor: pointer;
-}
+					img:hover{
+						cursor: pointer;
+					}
 
-#selos{
-	float: left;
-	margin-left: 30%;
-	margin-top: 6%;
-	position: inline-block;
-}
+					#selos{
+						float: left;
+						margin-left: 30%;
+						margin-top: 6%;
+						position: inline-block;
+					}
 
-#selos a img{
-	border:0;
-	width:88px;
-	height:31px
-}
+					#selos a img{
+						border:0;
+						width:88px;
+						height:31px
+					}
