--- a/css/identidadevisual-style.css
+++ b/css/identidadevisual-style.css
@@ -16,6 +16,34 @@
 						padding: 20px 20px 20px 20px;
 					}
 
+					/******************************/
+					/* #container-nome            */
+					/******************************/
+					#container-nome{
+						height: 230px;
+					}
+
+					/*****************************/
+					/* .formulario               */
+					/*****************************/
+					#container-nome label{
+						font-weight: bold;
+						display: block;
+						margin: 10px 0px 2px 0px;
+					}
+
+					#input-other-color,
+					#container-nome input[type='text']{
+						width: 100%;
+						padding: 6px 0px 6px 0px;
+						
+						border-radius: 4px;
+						-moz-border-radius: 4px;
+						-webkit-border-radius: 4px;
+						border: solid 1px #E5E5E5;
+					}
+
+
 					/*******************************/
 					/* #container-identidade-visual*/
 					/*******************************/
@@ -48,9 +76,7 @@
 					form input[type=submit]{
 						margin-top: 30px;
 						float: right;
-					}
 
-					form input[type=submit]{
 						height: 3.5em;
 						width: 14.5em;
 
