--- a/css/dashboard-style.css
+++ b/css/dashboard-style.css
@@ -2,14 +2,51 @@
 					/* .container-dashboard      */
 					/*****************************/
 					.container-dashboard{
+						width: 98%;
+						margin-top: 10px;
+						margin-left: 10px;
+
 						background-color: #ffffff;
 
 						border: 1px solid #c1c1c1;
 						border-radius: 4px;
 						-moz-border-radius: 4px;
 						-webkit-border-radius: 4px;
-						
+
 						box-shadow: 0px 0px 50px -15px #b1b1b1;
 					   	-webkit-box-shadow: 0px 0px 50px -15px #b1b1b1;
 					   	-moz-box-shadow: 0px 0px 50px -15px #b1b1b1;
+					}
+
+					.container-dashboard .header{
+						padding: 10px 10px 10px 20px;
+						border-bottom: 1px groove #72b2ee;
+					}
+
+					.container-dashboard .body{
+						padding: 20px 20px 20px 20px;
+					}
+
+					/*****************************/
+					/* form input submit         */
+					/*****************************/
+					form input[type=submit]{
+						margin-top: 30px;
+						float: right;
+
+						height: 3.5em;
+						width: 14.5em;
+
+						border: 1px solid #efefef;
+						border-radius: 2px;
+						-webkit-border-radius: 2px;
+						-moz-border-radius: 2px;
+
+						color: #ffffff;
+						background-color: #72b2ee;
+					}
+
+					form input[type=submit]:hover{
+						cursor: pointer;
+						border: 1px solid #a1a1a1;
 					}
