--- a/css/global.css
+++ b/css/global.css
@@ -85,6 +85,15 @@
 						visibility: hidden;
 					}
 
+					/************************************/
+					/* img-rounded   					*/
+					/************************************/
+					.img-rounded {
+						border-radius: 80px;
+						-webkit-border-radius: 80px;
+						-moz-border-radius: 80px;
+					}
+
 					/*****************************/
 					/* Header                    */
 					/*****************************/
@@ -200,17 +209,60 @@
 					  	-o-transition: all 0.30s ease-in-out;
 					}
 
-					input:focus, 
-					textarea:focus, 
-					select:focus {
-					  	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-					  	border: 1px solid rgba(81, 203, 238, 1);
+					/*****************************/
+					/* .formulario               */
+					/*****************************/
+					.formulario{
+						width: 92%;
+						margin-left: 30px;
+						display: inline-block;
+					}
+
+					.formulario fieldset{
+						border: 0px solid #ffffff;
+					}
+
+					.formulario fieldset label{
+						font-weight: bold;
+						display: block;
+						margin: 10px 0px 2px 0px;
+					}
+
+					.formulario fieldset input,
+					.formulario fieldset select,
+					.formulario fieldset textarea{
+						width: 100%;
+						padding: 6px 0px 6px 0px;
+						
+						border-radius: 4px;
+						-moz-border-radius: 4px;
+						-webkit-border-radius: 4px;
+						border: solid 1px #E5E5E5;
+					}
+
+					.formulario fieldset textarea{	
+						height: 100px;
+					}
+
+					/*****************************/
+					/* .btn-form                 */
+					/*****************************/
+					.btn-form{
+						width: 100%;
+						height: 2.2em;
+						margin-top: 5px;
+						color: #ffffff;
+						background-color: #72b2ee;
+					}
+
+					.btn-form:hover{
+						cursor: pointer;
+						border: 1px solid #a1a1a1;
 					}
 
 					/*****************************/
 					/* Dashboard                 */
 					/*****************************/
-
 					#menu-dashboard{
 						width: 18%;
 						height: 900px;
