--- a/css/master-page-style.css
+++ b/css/master-page-style.css
@@ -14,6 +14,13 @@
 					}
 
 					/*****************************/
+					/* .linkLoggedIn             */
+					/*****************************/
+					.linkLoggedIn label{
+						color: #ffffff;
+					}
+
+					/*****************************/
 					/* Menu                      */
 					/*****************************/
 					nav{
@@ -94,4 +101,4 @@
 					input[type=submit]:hover{
 						cursor: pointer;
 						border: 1px solid #a1a1a1;
-					}	
+					}
